# Move-Lint

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/ast/: build.rs  compiled_ast.rs  config.rs  core.rs  file.rs  lock.rs  mod.rs
src/lint/: config.rs  context.rs  detector.rs  issue.rs  mod.rs
src/lint/detectors/: README.md  detector1.rs  detector2.rs  detector3.rs  detector4.rs  detector5.rs  detector6.rs  detector7.rs  detector8.rs  mod.rs  utils.rs
src/lint/detectors/utils/: ast3.rs  ast4.rs  mod.rs  visitor.rs
testcases/Detector1/: Move.toml
testcases/Detector1/sources/: Detector1.move
tests/: test_detectors.rs
tests/cases/Detector1/sources/: Detector.move
tests/cases/Detector2/sources/: Detector.move
tests/cases/Detector4/sources/: Detector.move
tests/cases/Detector5/sources/: Detector.move
tests/cases/Detector6/sources/: Detector.move
tests/cases/Detector7/sources/: Detector.move
tests/cases/Detector8/: Move.toml
tests/cases/Detector8/sources/: Detector.move
