[package]
name = "move-ast"
version = "0.1.0"
authors = ["leocll <leocll@qq.com>"]
description = "CLI frontend for the Move ast"
# repository = "https://github.com/diem/diem"
# homepage = "https://diem.com"
# license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.4"
clap = { version = "3.1.8", features = ["derive"] }
once_cell = "1.7.2"
named-lock = "0.2.0"
whoami = { version = "1.2.1" }
petgraph = "0.5.1"
serde = { version = "1.0", features = ["derive"] }

move-package = { git = "https://github.com/move-language/move", subdir = "language/tools/move-package", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-core-types = { git = "https://github.com/move-language/move", subdir = "language/move-core/types", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-ir-types = { git = "https://github.com/move-language/move", subdir = "language/move-ir/types", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-compiler = { git = "https://github.com/move-language/move", subdir = "language/move-compiler", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
# move-stdlib = { git = "https://github.com/move-language/move", subdir = "language/move-stdlib", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6", features = ["testing"] }
move-symbol-pool = { git = "https://github.com/move-language/move", subdir = "language/move-symbol-pool", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-model = { git = "https://github.com/move-language/move", subdir = "language/move-model", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-abigen = { git = "https://github.com/move-language/move", subdir = "language/move-prover/move-abigen", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-docgen = { git = "https://github.com/move-language/move", subdir = "language/move-prover/move-docgen", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
move-command-line-common = { git = "https://github.com/move-language/move", subdir = "language/move-command-line-common", rev = "f976503ec92e6942eac1c05dd8231918d07e0af6" }
